@@ -1,3 +1,8 @@
+2002-07-28  Jacob Smullyan  <smulloni@smullyan.org>
+
+	* SkunkWeb/Services/pycgi.py (_fix): dumb error in determining
+	SCRIPT_NAME 
+
 2002-07-28  Andrew Csillag  <drew@localhost.localdomain>
 
 	* docs/paper-letter/Makefile, docs/html/Makefile: added stuff for
